Add last rooms and cleanup